<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">android_Bill</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="账目类型">账目类型</string>
    <string name="收入支出">收入支出</string>
    <string name="费用总额">费用总额</string>
    <string name="选择时间">选择时间</string>
    <string name="备注">备注:</string>
    <string name="确认">确 认</string>
    <string name="清空">清 空</string>
    <string name="加法">+</string>
    <string name="title_activity_date_picker_fragment">DatePickerFragment</string>
    <string name="编辑中">编辑中</string>
    <string name="取消">取消</string>
    <string name="总额">"总额 -- "</string>

</resources>
