<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:minWidth="80dip"
                android:text="@string/账目类型"
                android:textSize="@dimen/abc_action_bar_content_inset_material" />

            <Spinner
                android:id="@+id/ItemSpinner"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/abc_action_bar_home_description"
                android:minWidth="200dip"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/InorOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:minWidth="80dip"
                android:text="@string/收入支出"
                android:textSize="@dimen/abc_action_bar_content_inset_material" >
            </TextView>

            <Spinner
                android:id="@+id/InOrOutSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/abc_action_bar_home_description"
                android:minWidth="200dip"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:minWidth="80dip"
                android:text="@string/费用总额"
                android:textSize="@dimen/abc_action_bar_content_inset_material" >
            </TextView>

            <EditText
                android:id="@+id/EditFee"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:numeric="decimal"
                android:width="250dip" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout6"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/LinearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TimeChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:minWidth="80dip"
                    android:paddingTop="5dp"
                    android:text="@string/选择时间"
                    android:textSize="@dimen/abc_action_bar_content_inset_material" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/EditTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="15"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:gravity="center_vertical|center" />

                <Button
                    android:id="@+id/BtnChangeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="更改"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout9"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/备注"
                android:textSize="@dimen/abc_action_bar_content_inset_material" />

            <EditText
                android:id="@+id/EditComment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top"
                android:lines="4">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/BtnSure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttondarkgray"
                android:text="@string/确认"
                android:textSize="24dip"
                android:width="160dip" >

            </Button>

            <Button
                android:id="@+id/BtnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttondarkgray"
                android:text="@string/清空"
                android:textSize="24dip"
                android:width="160dip" >

            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>